--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,7 +23,7 @@
     </servlet-mapping>
     <filter>
         <filter-name>Filter</filter-name>
-        <filter-class>Filter.AuthenticationFilter</filter-class>
+        <filter-class>filter.AuthenticationFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>Filter</filter-name>
